[tool.poetry]
name = "heaume-infrastructure"
version = "0.1.0"
description = "The infrastructure of heaume."
authors = ["dylandoamaral <do.amaral.dylan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^2.20.0"
pulumi-aws = "^3.28.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
