[tool.poetry]
name = "heaume-infrastructure"
version = "0.1.0"
description = "The infrastructure of heaume."
authors = ["dylandoamaral <do.amaral.dylan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
pulumi = "^2.20.0"
pulumi-aws = "^3.28.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-spec = "^3.1.0"
pytest-describe = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint]
line-length = 100

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pulumi.*",
    "ignore::DeprecationWarning:pulumi_aws.*"
]
spec_test_format = "{result} {name}"
