[tool.poetry]
name = "heaume-infrastructure"
version = "0.1.0"
description = "The infrastructure of heaume."
authors = ["dylandoamaral <do.amaral.dylan@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
pulumi = "^2.20.0"
pulumi-aws = "^3.28.0"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-spec = "^3.1.0"
pytest-describe = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 100

[tool.pylint.masters]
max-line-length = 100
disable = ["E501", "W503", "C0114", "R0801", "R0913", "R0914"]
ignore = [
    ".git",
    "__pycache__",
    "setup.py",
    "build",
    "dist",
    "releases",
    ".idea",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".github",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pulumi.*",
    "ignore::DeprecationWarning:pulumi_aws.*",
]
spec_test_format = "{result} {name}"
